# binn

./: CMakeLists.txt  makefile  tools.cmake
comps/basic/files/src/: binn_create.c
comps/basic/files/test/: test_binn.h
comps/json/files/src/: json_to_binn.c
comps/json/files/test/: test_chunck_json.c
ext-build/: boz-build.cmake  boz-incgen.cmake  boz-install.cmake
include/: CMakeLists.txt  binn.h  binn_json.h  binn_types.h  json.h
src/: CMakeLists.txt  binn.c  binn_add_value.c  binn_add_value_from_id.c  binn_add_value_from_key.c  binn_add_value_from_pos.c  binn_all_next.c  binn_copy_value.c  binn_create.c  binn_free.c  binn_get_value.c  binn_get_value_from_id.c  binn_get_value_from_key.c  binn_get_value_from_pos.c  binn_init.c  binn_is_valid.c  binn_json.c  binn_list.c  binn_list_add.c  binn_list_add_xxx.c.tmpl  binn_list_get.c  binn_map_get.c  binn_map_get_xxx.c.tmpl  binn_map_set.c  binn_object_get.c  binn_object_get_xxx.c.tmpl  binn_object_set.c  binn_object_set_xxx.c.tmpl  binn_search_for_id.c  binn_search_for_key.c  binn_search_for_pos.c  binn_to_json.c  gen_macros.cmake
src/basic/: CMakeLists.txt  binn.c  binn_add_value_from_id.c  binn_add_value_from_key.c  binn_add_value_from_pos.c  binn_all_next.c  binn_blob.c  binn_copy_value.c  binn_create.c  binn_free.c  binn_get_value.c  binn_get_value_from_id.c  binn_get_value_from_key.c  binn_get_value_from_pos.c  binn_init.c  binn_internal.c  binn_is_valid.c  binn_iter_init.c  binn_list_add.c  binn_list_add_item.c  binn_list_get_item.c  binn_list_get_xxx.c.tmpl  binn_map.c  binn_map_add_item.c  binn_map_get.c  binn_map_get_id.c  binn_map_get_item.c  binn_map_set.c  binn_map_set_xxx.c.tmpl  binn_new.c  binn_object.c  binn_object_add_item.c  binn_object_get.c  binn_object_get_item.c  binn_object_get_key.c  binn_object_get_xxx.c.tmpl  binn_object_set.c  binn_search_for_id.c  binn_search_for_key.c  binn_search_for_pos.c  (+7 more)
src/json/: CMakeLists.txt  binn_json.c  binn_to_json.c  binn_to_json_str.c
src/priv/: binn.h  binn_json.h
test/: CMakeLists.txt  test_basic.c  test_binn.c  test_binn.h  test_binn2.c  test_integers.c  test_json.c  test_sublist.c  test_submap.c  test_subobjects.c
